force-app/main/default/objects/Case/fields/Abstrakt_Cloud_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Abstrakt_Cloud_Case_ID__c</fullName>
    <label>Abstrakt Cloud Case ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>