force-app/main/default/objects/Case/fields/Abstrakt_Location__c.field-meta.xml
<CustomField>
    <fullName>Abstrakt_Location__c</fullName>
    <description>Used for Client Visit Information</description>
    <label>Abstrakt Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Raeder2</fullName>
            </value>
            <value>
                <fullName>Raeder5</fullName>
            </value>
            <value>
                <fullName>Peper Lofts</fullName>
            </value>
            <value>
                <fullName>Levee1</fullName>
            </value>
            <value>
                <fullName>Levee2</fullName>
            </value>
            <value>
                <fullName>Levee3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>