force-app/main/default/objects/Case/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>IF(NOT(CONTAINS( Account.Name, &apos;Abstrakt&apos;)), Account.Owner.FirstName + &quot; &quot; + Account.Owner.LastName,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>