force-app/main/default/objects/Case/fields/Action_Item_One__c.field-meta.xml
<CustomField>
    <fullName>Action_Item_One__c</fullName>
    <label>Action Item One</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>