force-app/main/default/objects/Case/fields/Action_Item_Two__c.field-meta.xml
<CustomField>
    <fullName>Action_Item_Two__c</fullName>
    <label>Action Item Two</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>