force-app/main/default/objects/Case/fields/Action_Item_Two_Completed__c.field-meta.xml
<CustomField>
    <fullName>Action_Item_Two_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action Item Two Completed</label>
    <type>Checkbox</type>
</CustomField>