force-app/main/default/objects/Case/fields/Addendum_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Change_Type__c</fullName>
    <label>Addendum Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualifier Change</fullName>
            </value>
            <value>
                <fullName>Reset Old Appointments</fullName>
            </value>
            <value>
                <fullName>Territory Change</fullName>
            </value>
            <value>
                <fullName>Adding New Territory</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Price Change</fullName>
            </value>
            <value>
                <fullName>Program Size</fullName>
            </value>
            <value>
                <fullName>Renewing Contract</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>