force-app/main/default/objects/Case/fields/Addendum_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Start_Date__c</fullName>
    <label>Addendum Start Date</label>
    <type>Date</type>
</CustomField>