force-app/main/default/objects/Case/fields/Addressed_In_Two_Days__c.field-meta.xml
<CustomField>
    <fullName>Addressed_In_Two_Days__c</fullName>
    <formula>AND(NOT(ISPICKVAL(Status,&quot;Open&quot;)),Business_Days_to_Address_Case__c &lt; 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Addressed In Two Days</label>
    <type>Checkbox</type>
</CustomField>