force-app/main/default/objects/Case/fields/Agency_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Agency_Case_Type__c</fullName>
    <label>Agency Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>404 Errors</fullName>
            </value>
            <value>
                <fullName>Adding Partner Logos</fullName>
            </value>
            <value>
                <fullName>Aesthetic Changes</fullName>
            </value>
            <value>
                <fullName>Analytics Issue</fullName>
            </value>
            <value>
                <fullName>Client Go Live Edits</fullName>
            </value>
            <value>
                <fullName>Client Information</fullName>
            </value>
            <value>
                <fullName>Content Revision</fullName>
            </value>
            <value>
                <fullName>Digital Logins</fullName>
            </value>
            <value>
                <fullName>Example 1</fullName>
            </value>
            <value>
                <fullName>Example 2</fullName>
            </value>
            <value>
                <fullName>Example 3</fullName>
            </value>
            <value>
                <fullName>Example 4</fullName>
            </value>
            <value>
                <fullName>Example 5</fullName>
            </value>
            <value>
                <fullName>Headers</fullName>
            </value>
            <value>
                <fullName>Icon Changes</fullName>
            </value>
            <value>
                <fullName>Image Changes</fullName>
            </value>
            <value>
                <fullName>Local SEO</fullName>
            </value>
            <value>
                <fullName>Need More Information</fullName>
            </value>
            <value>
                <fullName>New Page</fullName>
            </value>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>Website Audit</fullName>
            </value>
            <value>
                <fullName>Website Bug Fix</fullName>
            </value>
            <value>
                <fullName>Website Enhancement</fullName>
            </value>
            <value>
                <fullName>Website QA Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>