force-app/main/default/objects/Case/fields/Any_Additional_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Any_Additional_Expenses__c</fullName>
    <label>Any Additional Expenses</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>