force-app/main/default/objects/Case/fields/AR_Stage__c.field-meta.xml
<CustomField>
    <fullName>AR_Stage__c</fullName>
    <description>Track what status an invoice is at for accounting.</description>
    <label>AR Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Email (AR Specialist)</fullName>
            </value>
            <value>
                <fullName>1st Call - 2nd Email (AR Specialist)</fullName>
            </value>
            <value>
                <fullName>2nd Call - 3rd Email (AR Specialist)</fullName>
            </value>
            <value>
                <fullName>3rd Call (AR Specialist)</fullName>
            </value>
            <value>
                <fullName>Day 10-25: PSM Calls Daily</fullName>
            </value>
            <value>
                <fullName>Day 25: PSM Sends Suspension Warning</fullName>
            </value>
            <value>
                <fullName>Day 25-30: PSM + Director Calls Daily</fullName>
            </value>
            <value>
                <fullName>Day 30: PSM Sends Official Suspension Notice</fullName>
            </value>
            <value>
                <fullName>Day 30-40: PSM + VP Calls Daily</fullName>
            </value>
            <value>
                <fullName>Day 40: PSM Offboards Client</fullName>
            </value>
            <value>
                <fullName>Day 40: Demand Letter Sent (AR Specialist)</fullName>
            </value>
            <value>
                <fullName>Received Payment Confirmation</fullName>
            </value>
            <value>
                <fullName>Sent to Collections</fullName>
            </value>
            <value>
                <fullName>Offboarded</fullName>
            </value>
            <value>
                <fullName>Resolved + Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>