force-app/main/default/objects/Case/fields/Are_we_speaking_at_the_trade_show__c.field-meta.xml
<CustomField>
    <fullName>Are_we_speaking_at_the_trade_show__c</fullName>
    <label>Are we speaking at the trade show?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>