force-app/main/default/objects/Case/fields/Art_Required__c.field-meta.xml
<CustomField>
    <fullName>Art_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Art Required?</label>
    <type>Checkbox</type>
</CustomField>