force-app/main/default/objects/Case/fields/Assigned_Must_be_Resolved_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Must_be_Resolved_by_Date__c</fullName>
    <label>Requested Resolved by Date</label>
    <type>Date</type>
</CustomField>