force-app/main/default/objects/Case/fields/Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team__c</fullName>
    <label>Assigned Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VMM</fullName>
            </value>
            <value>
                <fullName>Web Development</fullName>
            </value>
            <value>
                <fullName>Creative</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Digital Strategy</fullName>
            </value>
            <value>
                <fullName>Copywriters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>