force-app/main/default/objects/Case/fields/Assigned_to_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Currently used to store Primary Dialer Update user ID in the flow Case: Guided Case Submission to update current PSR on account page using process builder.</description>
    <label>Assigned to User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>