force-app/main/default/objects/Case/fields/Associated_Action__c.field-meta.xml
<CustomField>
    <fullName>Associated_Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Action</label>
    <referenceTo>amc__Action__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>