force-app/main/default/objects/Case/fields/Bug_or_Enhancement__c.field-meta.xml
<CustomField>
    <fullName>Bug_or_Enhancement__c</fullName>
    <label>Bug or Enhancement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>