force-app/main/default/objects/Case/fields/Business_Days_to_Address_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_to_Address_Case__c</fullName>
    <description>The business hours taken to address a case and dividing it by 9 hours in a business day (with lunch)</description>
    <formula>Business_Hours_to_Address_Case__c/9</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days to Address Case</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>