force-app/main/default/objects/Case/fields/Business_Days_to_Resolve_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_to_Resolve_Case__c</fullName>
    <formula>Resolved_Time_Business_Hours__c/9</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days to Resolve Case</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>