force-app/main/default/objects/Case/fields/Business_Hours_to_Address_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_to_Address_Case__c</fullName>
    <description>https://success.salesforce.com/answers?id=9063A000000iXTl</description>
    <formula>ROUND( 9 * (
( 5 * FLOOR( ( DATEVALUE( Status_Change_Date_Time__c) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( Status_Change_Date_Time__c) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 9 * ( MOD( Status_Change_Date_Time__c- DATETIMEVALUE( &apos;1900-01-08 11:00:00&apos; ), 1 ) )
)
)
)
-
( 5 * FLOOR( ( DATEVALUE( CreatedDate) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 9 * ( MOD( CreatedDate - DATETIMEVALUE( &apos;1900-01-08 11:00:00&apos; ), 1) )
)
)
)
),
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Hours to Address Case</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>