force-app/main/default/objects/Case/fields/BusinessHourstoAddressCase__c.field-meta.xml
<CustomField>
    <fullName>BusinessHourstoAddressCase__c</fullName>
    <label>Business Hours to Address Case</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>