force-app/main/default/objects/Case/fields/Case_Age_Hours__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_Hours__c</fullName>
    <description>Custom field used for A-Player</description>
    <formula>IF(IsClosed, 
((ClosedDate - CreatedDate)*24),  
((NOW() - CreatedDate)*24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age (Hours)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>