force-app/main/default/objects/Case/fields/Case_Age_Points__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_Points__c</fullName>
    <formula>if( Resolved_Time_Business_Hours__c  &lt; 80,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>