force-app/main/default/objects/Case/fields/Case_Aging_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Aging_Time__c</fullName>
    <formula>ROUND(8*( 
(5*FLOOR((TODAY()-DATE(1996,01,01))/7) + 
MIN(5, 
MOD(TODAY()-DATE(1996,01,01), 7) + 
MIN(1, 24/8*(MOD(NOW()-DATETIMEVALUE(&apos;1996-01-01 13:00:00&apos;), 1))) 
)) 
- 
(5*FLOOR((DATEVALUE(CreatedDate)-DATE(1996,01,01))/7) + 
MIN(5, 
MOD(DATEVALUE(CreatedDate)-DATE(1996,01,01), 7) + 
MIN(1, 24/8*(MOD(CreatedDate-DATETIMEVALUE(&apos;1996-01-01 13:00:00&apos;), 1))) 
)) 
), 

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Aging Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>