force-app/main/default/objects/Case/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department_Responsible_for_Issue__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Certification</fullName>
            </value>
            <value>
                <fullName>Accounting Questions</fullName>
            </value>
            <value>
                <fullName>Account Page Creation</fullName>
            </value>
            <value>
                <fullName>Account Page Updates</fullName>
            </value>
            <value>
                <fullName>Allocations</fullName>
            </value>
            <value>
                <fullName>A-Player Scorecard</fullName>
            </value>
            <value>
                <fullName>Appointment Goal / Point Request</fullName>
            </value>
            <value>
                <fullName>AR Collections - Abstrakt</fullName>
            </value>
            <value>
                <fullName>AR Collections - Sapper</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Bonus / Commission Update</fullName>
            </value>
            <value>
                <fullName>Bugs</fullName>
            </value>
            <value>
                <fullName>Change of Billing Contact</fullName>
            </value>
            <value>
                <fullName>Change of Billing Due Date</fullName>
            </value>
            <value>
                <fullName>Change of Payment Type</fullName>
            </value>
            <value>
                <fullName>Cleansing Program Placeholder</fullName>
            </value>
            <value>
                <fullName>Client Tech Maintenance</fullName>
            </value>
            <value>
                <fullName>Client Visit</fullName>
            </value>
            <value>
                <fullName>Collections Issue / Request</fullName>
            </value>
            <value>
                <fullName>Compensation Document</fullName>
            </value>
            <value>
                <fullName>Contract / Addendum Questions</fullName>
            </value>
            <value>
                <fullName>Copywriting</fullName>
            </value>
            <value>
                <fullName>Corrective Action</fullName>
            </value>
            <value>
                <fullName>COVID Illness</fullName>
            </value>
            <value>
                <fullName>Creative - External</fullName>
            </value>
            <value>
                <fullName>Creative - Internal</fullName>
            </value>
            <value>
                <fullName>Custom / Other</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Desk Move Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>