force-app/main/default/objects/Case/fields/Case_Points__c.field-meta.xml
<CustomField>
    <fullName>Case_Points__c</fullName>
    <formula>CASE(Case_Type__c, 
&quot;PSR Team&quot;,0.5, 
&quot;Allocation Changes&quot;,0.5, 
&quot;Ownership Change&quot;,0.5, 
&quot;Clean Up Pipeline&quot;,3, 
&quot;Dashboard / Report Request&quot;,1, 
&quot;Email Library&quot;,0.5, 
&quot;Implementation List&quot;,2, 
&quot;List Request&quot;,2, 
&quot;Operations Project&quot;,1, 
&quot;Retention Meeting Action Item&quot;,2, 
&quot;Salesforce Audit&quot;,2, 
&quot;Salesforce Bug Fix&quot;,2, 
&quot;Salesforce Development&quot;,2, 
&quot;Survey Edit/Issue&quot;,0.5, 
&quot;Offboarding Process&quot;,0.5, 
&quot;Account Page Update&quot;,0.5, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>