force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce List Import</fullName>
            </value>
            <value>
                <fullName>Ownership Change</fullName>
            </value>
            <value>
                <fullName>Dashboard Request</fullName>
            </value>
            <value>
                <fullName>Resolving Technology Issue</fullName>
            </value>
            <value>
                <fullName>Email Built-In Predictive Response</fullName>
            </value>
            <value>
                <fullName>Report Request</fullName>
            </value>
            <value>
                <fullName>New Product Software Request</fullName>
            </value>
            <value>
                <fullName>List Request</fullName>
            </value>
            <value>
                <fullName>Dealer Complaint</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>404 Errors</fullName>
            </value>
            <value>
                <fullName>Account Page Update</fullName>
            </value>
            <value>
                <fullName>Adding Partner Logos</fullName>
            </value>
            <value>
                <fullName>Aesthetic Changes</fullName>
            </value>
            <value>
                <fullName>Allocation Changes</fullName>
            </value>
            <value>
                <fullName>Analytics Issues</fullName>
            </value>
            <value>
                <fullName>Clean up Pipeline</fullName>
            </value>
            <value>
                <fullName>Client Certification</fullName>
            </value>
            <value>
                <fullName>Client Facing Product Enhancement</fullName>
            </value>
            <value>
                <fullName>Client Go Live Edits</fullName>
            </value>
            <value>
                <fullName>Compose Email Library</fullName>
            </value>
            <value>
                <fullName>Content Revision</fullName>
            </value>
            <value>
                <fullName>Create Call Guide</fullName>
            </value>
            <value>
                <fullName>Custom Report Development</fullName>
            </value>
            <value>
                <fullName>Development Production Support - Bug Fix</fullName>
            </value>
            <value>
                <fullName>Development Production Support - Enhancements</fullName>
            </value>
            <value>
                <fullName>Development Production Support - QA Feedback</fullName>
            </value>
            <value>
                <fullName>Email Issue</fullName>
            </value>
            <value>
                <fullName>Email Library</fullName>
            </value>
            <value>
                <fullName>Finalize Call Guide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>