force-app/main/default/objects/Case/fields/Case_Types__c.field-meta.xml
<CustomField>
    <fullName>Case_Types__c</fullName>
    <label>Case Types</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Ads</fullName>
            </value>
            <value>
                <fullName>Badge Request</fullName>
            </value>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>Bug Fix</fullName>
            </value>
            <value>
                <fullName>Business Cards</fullName>
            </value>
            <value>
                <fullName>Career Fair</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Client Issue</fullName>
            </value>
            <value>
                <fullName>Client Request</fullName>
            </value>
            <value>
                <fullName>CloudCall</fullName>
            </value>
            <value>
                <fullName>Collateral</fullName>
            </value>
            <value>
                <fullName>Content Adjustment</fullName>
            </value>
            <value>
                <fullName>Copy Site Edits</fullName>
            </value>
            <value>
                <fullName>Copywriting Enhancements</fullName>
            </value>
            <value>
                <fullName>Create New Course</fullName>
            </value>
            <value>
                <fullName>Custom Website</fullName>
            </value>
            <value>
                <fullName>Dashboard/Report Request</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Dead Inbox</fullName>
            </value>
            <value>
                <fullName>Deck</fullName>
            </value>
            <value>
                <fullName>Digital Support</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>DNE</fullName>
            </value>
            <value>
                <fullName>Domain Transfer</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Edits</fullName>
            </value>
            <value>
                <fullName>ELT</fullName>
            </value>
            <value>
                <fullName>Email Blast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>