force-app/main/default/objects/Case/fields/Client_Issue__c.field-meta.xml
<CustomField>
    <fullName>Client_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Issue</label>
    <type>Checkbox</type>
</CustomField>