force-app/main/default/objects/Case/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>Used to integrate to Salesforce Cloud Case field Work Completed Date when AMG case is closed.</description>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>