force-app/main/default/objects/Case/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>ISPICKVAL(Status__c, &apos;3 - Closed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>