force-app/main/default/objects/Case/fields/Completed_by_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_by_Requested_Date__c</fullName>
    <formula>IF( Closed_Date__c &lt;= Assigned_Must_be_Resolved_by_Date__c ,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed by Requested Date</label>
    <type>Checkbox</type>
</CustomField>