force-app/main/default/objects/Case/fields/Cost_of_Booth__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Booth__c</fullName>
    <label>Cost of Booth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>