force-app/main/default/objects/Case/fields/Create_PSR_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Create_PSR_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to add Helper to PSR Allocations</description>
    <label>Create PSR Allocation</label>
    <type>Checkbox</type>
</CustomField>