force-app/main/default/objects/Case/fields/Creating_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Creating_User_Email__c</fullName>
    <formula>CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creating User Email</label>
    <type>Text</type>
</CustomField>