force-app/main/default/objects/Case/fields/Creative_Content__c.field-meta.xml
<CustomField>
    <fullName>Creative_Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creative Content</label>
    <referenceTo>Inbound_Content__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>