force-app/main/default/objects/Case/fields/Current_Company__c.field-meta.xml
<CustomField>
    <fullName>Current_Company__c</fullName>
    <description>Used to identify which company the prospect currently is partnered with.</description>
    <label>Current Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abstrakt Marketing Group</fullName>
            </value>
            <value>
                <fullName>Sapper Consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>