force-app/main/default/objects/Case/fields/Date_of_Show__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Show__c</fullName>
    <label>Date of Show</label>
    <type>Date</type>
</CustomField>